@@ -1,6 +1,6 @@
 <?php
 /*
- * $Header: /cvsroot/nocc/nocc/webmail/conf.php.dist,v 1.118 2003/12/21 15:40:20 goddess_skuld Exp $
+ * $Header: /cvsroot/nocc/nocc/webmail/conf.php.dist,v 1.119 2004/01/03 12:10:09 goddess_skuld Exp $
  *
  * Copyright 2001 Nicolas Chalanset <nicocha@free.fr>
  * Copyright 2001 Olivier Cahagne <cahagn_o@epita.fr>
@@ -53,6 +53,8 @@ $conf->domains[$i]->smtp = '';
 $conf->domains[$i]->smtp_port = 25;
 // Uncomment for 'user@domain.com' style logins
 //$conf->domains[$i]->login_with_domain = 1;
+// Fill in if you require login suffixes for your mail server
+$conf->domains[$i]->login_suffix = '';
 
 // If you want to add more domains, uncomment the following
 // lines and fill them in
@@ -63,6 +65,7 @@ $conf->domains[$i]->smtp_port = 25;
 //$conf->domains[$i]->smtp = '';
 //$conf->domains[$i]->smtp_port = 25;
 //$conf->domains[$i]->login_with_domain = 1;
+//$conf->domains[$i]->login_suffix = '';
 
 //$i++;
 //$conf->domains[$i]->domain = '';
@@ -70,6 +73,7 @@ $conf->domains[$i]->smtp_port = 25;
 //$conf->domains[$i]->smtp = '';
 //$conf->domains[$i]->smtp_port = 25;
 //$conf->domains[$i]->login_with_domain = 1;
+//$conf->domains[$i]->login_suffix = '';
 
 // Is the user allowed to change his "From:" address? (true/false)
 $conf->allow_address_change = true;
@@ -175,6 +179,9 @@ $conf->msg_per_page = '25';
 // Set this to '1' to enable the status line for folders at the bottom of the inbox page.
 // If you get slow page loads, set it to '0' to disable this (rather slow) function.
 $conf->status_line = '1';
+
+//Uncomment this to allow secure typed domain logins
+//$conf->typed_domain_login = '1';
 
 // ################### Messages Signature  ################### //
 
